change close answer button of expert question

--- a/expert/templates/expert/layouts/show_question.html
+++ b/expert/templates/expert/layouts/show_question.html
@@ -47,7 +47,6 @@
                     <div class="row text-right">
                         <div class="col-lg-12">
                             <span class="section-title">پاسخ ها</span>
-                            <button class="default-btn close-answer">بستن پاسخ جدید</button>
                             <div class="section">
                                 <div class="no-comment">
                                     <img src="{% static 'img/hourglass.svg' %}" alt="no message">
@@ -61,7 +60,9 @@
                     </div>
                 </div>
             </div>
-            <div class="modal-footer"></div>
+            <div class="modal-footer">
+                <button class="default-btn close-answer w-100">بستن پاسخ جدید</button>
+            </div>
         </div>
     </div>
 </div>
