--- a/static/expert/css/style.css
+++ b/static/expert/css/style.css
@@ -551,14 +551,15 @@
 .modal .close-answer {
     background-color: transparent;
     color: #ff4545;
-    position: absolute;
-    top: -10px;
-    left: 15px;
+    /*position: absolute;*/
+    /*top: -10px;*/
+    /*left: 15px;*/
     -webkit-transition: all ease 0.2s;
     -moz-transition: all ease 0.2s;
     -ms-transition: all ease 0.2s;
     -o-transition: all ease 0.2s;
     transition: all ease 0.2s;
+    margin: 0 1rem;
 }
 
 .modal .close-answer:hover {
