--- a/expert/templates/expert/layouts/paper_form.html
+++ b/expert/templates/expert/layouts/paper_form.html
@@ -35,7 +35,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 d-none d-md-flex">
-                                <img src="{% static '/img/paper.svg' %}" alt="paper img" class="form-image">
+                                <img src="{% static '/img/paper.svg' %}" alt="paper img" class="form-image" width="100%">
                             </div>
                         </div>
                     </div>
