--- a/expert/templates/expert/layouts/research_form.html
+++ b/expert/templates/expert/layouts/research_form.html
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 d-none d-md-flex">
-                                <img src="{% static '/img/research.svg' %}" alt="research img" class="form-image">
+                                <img src="{% static '/img/research.svg' %}" alt="research img" class="form-image" width="100%">
                             </div>
                         </div>
                     </div>
