--- a/researcher/templates/researcher/layouts/executive_form.html
+++ b/researcher/templates/researcher/layouts/executive_form.html
@@ -38,7 +38,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 d-none d-md-flex">
-                                <img src="{% static '/img/execution.svg' %}" alt="execution img" class="form-image">
+                                <img src="{% static '/img/execution.svg' %}" alt="execution img" class="form-image" width="100%">
                             </div>
                         </div>
                     </div>
