--- a/researcher/templates/researcher/layouts/research_form.html
+++ b/researcher/templates/researcher/layouts/research_form.html
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 d-none d-md-flex">
-                                <img src="{% static '/img/research.svg' %}" alt="research img" class="form-image">
+                                <img src="{% static '/img/research.svg' %}" alt="research img" class="form-image" width="100%">
                             </div>
                         </div>
                     </div>
