add some question page svg to site

--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="row mt-5 mb-5">
                         <div class="col-md-4">
-                            picture
+                            <img class="border-0" src="{% static 'researcher/img/how_to_answer.svg' %}" alt="how_to_answer image">
                         </div>
                         <div class="col-md-8 text-right">
                             <h6>نحوه پاسخ دهی</h6>
@@ -126,15 +126,15 @@
                             </p>
                         </div>
                         <div class="col-md-4">
-                            picture
+                            <img class="border-0" src="{% static 'researcher/img/how_to_mark.svg' %}" alt="how_to_mark image">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12 text-center">
-{#                            <p>#}
-{#                                پیشنهاد می‌شود جهت یادگیری «نحوه جستجوی هدفمند مقالات در بانک مقالات» ویدیوی زیر را#}
-{#                                مشاهده نمایید.#}
-{#                            </p>#}
+                            {#                            <p>#}
+                            {#                                پیشنهاد می‌شود جهت یادگیری «نحوه جستجوی هدفمند مقالات در بانک مقالات» ویدیوی زیر را#}
+                            {#                                مشاهده نمایید.#}
+                            {#                            </p>#}
                             {#                            <video width="550" height="350" controls>#}
                             {#                                <source src="/media/VIDEO0041.mp4" type="video/mp4">#}
                             {#                                Your browser does not support the video tag.#}
