complete researcher question page

--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -68,10 +68,10 @@
                         </div>
                     </div>
                     <div class="row mt-5 mb-5">
-                        <div class="col-md-4">
-                            <img class="border-0" src="{% static 'researcher/img/how_to_answer.svg' %}" alt="how_to_answer image">
+                        <div class="col-xl-4 col-lg-5">
+                            <img class="rounded-0" src="{% static 'researcher/img/how_to_answer.svg' %}" alt="how_to_answer image">
                         </div>
-                        <div class="col-md-8 text-right">
+                        <div class="col-xl-8 col-lg-7 text-right">
                             <h6>نحوه پاسخ دهی</h6>
                             <hr>
                             <p style="text-align: right;">
@@ -109,8 +109,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mb-5">
-                        <div class="col-md-8 text-right">
+                    <div class="row mb-5 flex-column-reverse flex-lg-row">
+                        <div class="col-xl-8 col-lg-7 text-right">
                             <h6>نحوه امتیازدهی</h6>
                             <hr>
 
@@ -125,8 +125,8 @@
                                 پژوهشی جدید برای عضویت اقدام نمایند.
                             </p>
                         </div>
-                        <div class="col-md-4">
-                            <img class="border-0" src="{% static 'researcher/img/how_to_mark.svg' %}" alt="how_to_mark image">
+                        <div class="col-xl-4 col-lg-5">
+                            <img class="rounded-0" src="{% static 'researcher/img/how_to_mark.svg' %}" alt="how_to_mark image">
                         </div>
                     </div>
                     <div class="row">
