debug expert budget

--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -151,15 +151,6 @@
                                                             {{ enforcer_name }}
                                                         </div>
                                                     </div>
-                                                    <div class="col-12 budget-text">
-                                                        <div class="pre-header">
-                                                            <span>بودجه</span>
-                                                        </div>
-                                                        <div id="budget-content">
-                                                            <span class="budget-amount">{{ budget_amount }}</span>
-                                                            <span>ریال</span>
-                                                        </div>
-                                                    </div>
                                                 </div>
                                                 {% if executive_info %}
                                                     <div class="row">
@@ -188,7 +179,7 @@
                                                     <div class="budget">
                                                         <div class="budget-header">بودجه</div>
                                                         <div class="budget-content">
-                                                            <div class="budget-amount">1000</div>
+                                                            <div class="budget-amount">{{ budget_amount }}</div>
                                                             <div>ریال</div>
                                                         </div>
                                                     </div>
