bold and center last text of question page

--- a/static/researcher/css/style.css
+++ b/static/researcher/css/style.css
@@ -1730,7 +1730,7 @@ button.start-question {
     padding: 10px 20px;
     border: 1px solid #3ccd1c;
     background-color: #ffffff;
-    color: #89E076;
+    color: #3ccd1c;
 }
 
 .question button.start-question:hover,
