--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -48,7 +48,7 @@
                                 نیاز است که توانایی‌ها و انگیزه شما برای شرکت در کارهای تحقیقاتی محک زده شود.
                                 در همین راستا، مرحله‌ای برای پژوهشگران تازه‌وارد در نظر گرفته شده
                                 تا توانایی‌های علمی و مهارت‌های فردی در ابعاد کوچک مورد آزمایش قرار بگیرد.
-                                <br>
+                                 <br>
                                 بعد از شروع این مرحله، یک سوال پژوهشی در اختیار شما قرار می‌گیرد و شما یک هفته فرصت
                                 دارید تا به این سوال پژوهشی پاسخ دهید.
                                 این سوال پژوهشی، توسط یکی از اساتید عضو چمران تیم طراحی شده و در واقع تکه‌ای از یک پروژه
@@ -140,7 +140,7 @@
                             {#                                Your browser does not support the video tag.#}
                             {#                            </video>                            #}
                             {% if not answered %}
-                                <p>
+                                <p class="text-center" style="font-weight: 700!important;">
                                     اگر برای شروع این مرحله آماده هستید، کافی است روی دکمه زیر کلیک کنید.
                                 </p>
                                 <button class="start-question">
