just allow to upload zip and rar file for question answer

--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -126,12 +126,12 @@
                             <div class="info-text warning">
                                 <span class="star warning"></span>
                                 <p class="text-right">
-                                    اگر بیش از یک فایل برای بارگذاری در نظر دارید، لطفا به صورت یه فایل RAR بسته‌بندی کنید.
+                                   فایل شما باید به صورت rar یا zip باشد.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col-12 text-left">
                             <button type="submit" class="success-btn send-answer">ارسال پاسخ</button>
                         </div>
