--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -59,8 +59,7 @@
                                         <label for="add-new-technique"></label>
                                         <input style="margin: 0" type="text"
                                                class="w-100" name=""
-                                               id="add-new-technique"
-                                               placeholder="برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید">
+                                               id="add-new-technique">
                                     </div>
                                 </div>
                                 <div class="col-md-4 text-right mbottom-lg-25">
@@ -86,7 +85,7 @@
                                 <input type="checkbox" class="form-check-input inp-cbx" id="autoAddProject"
                                        name="requestResearcher" value=1 hidden checked>
                                     <label class="form-check-label cbx mb-0" for="autoAddProject">
-                                        <span class="mt-2">
+                                        <span>
                                             <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
                                                  xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd"
