refresh page after successfully submit project settings

--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -709,7 +709,7 @@
                                                    name="autoAddProject" value=1 hidden
                                                    {% if autoAddProject %}checked{% endif %}>
                                             <label class="form-check-label cbx mb-0" for="autoAddProject">
-                                                <span class="mt-2">
+                                                <span>
                                                     <svg class="inline-svg bi bi-check2" viewBox="0 0 16 16"
                                                          xmlns="http://www.w3.org/2000/svg">
                                                         <path fill-rule="evenodd"
