--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -3,6 +3,11 @@
 {% load gregorian_to_jalali %}
 {% block title %}پروژه ها{% endblock %}
 
+{% block style %}
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css"/>
+{% endblock %}
+
 {% block dialog %}
     {% comment %} {% include 'industry/layouts/project_details.html' %} {% endcomment %}
     {% include 'industry/layouts/vote_dialog.html' %}
@@ -346,4 +351,26 @@
 
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+             $('#ApplicationDeadline').datetimepicker({
+                 locale: 'fa',
+                 format: 'L',
+                 debug: true
+             });
+
+
+
+            //$('#datetimepicker13').datetimepicker({
+            //    inline: true,
+            //    locale: 'fa',
+            //    format: 'L',
+            //    toolbarPlacement: 'bottom',
+            //    showToday: true,
+            //});
+        });
+    </script>
 {% endblock %}
