update project front end of fields

--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -40,22 +40,22 @@
                                     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-home"
                                        aria-selected="true">
-                                        شاخص ها
+                                        بیان مسئله
                                     </a>
                                     <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-profile"
                                        aria-selected="false">
-                                        راهکار ها
+                                        روش اجرا
                                     </a>
                                     <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-messages"
                                        aria-selected="false">
-                                        منابع مورد نیاز
+                                        اهداف
                                     </a>
                                     <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-settings"
                                        aria-selected="false">
-                                        قوانین
+                                        ملاحظات اخلاقی
                                     </a>
                                 </div>
                             </div>
