--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -39,22 +39,22 @@
                             <a class="nav-link active" id="v-pills-majors-tab" data-toggle="pill"
                                role="tab" aria-controls="v-pills-majors"
                                aria-selected="true">
-                                شاخص ها
+                                بیان مسئله
                             </a>
                             <a class="nav-link" id="v-pills-approaches-tab" data-toggle="pill"
                                role="tab" aria-controls="v-pills-approaches"
                                aria-selected="false">
-                                راهکار ها
+                                روش اجرا
                             </a>
                             <a class="nav-link" id="v-pills-resources-tab" data-toggle="pill"
                                role="tab" aria-controls="v-pills-resources"
                                aria-selected="false">
-                                منابع مورد نیاز
+                                اهداف
                             </a>
                             <a class="nav-link" id="v-pills-roles-tab" data-toggle="pill"
                                role="tab" aria-controls="v-pills-roles"
                                aria-selected="false">
-                                قوانین
+                                ملاحظات اخلاقی
                             </a>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                                         <span class="question-mark">
                                             <i class="far fa-question-circle"></i>
                                         </span>
-                                        لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.
+                                        خلاصه ضرورت اجرا
                                     </div>
                                     <div class="answer"></div>
                                 </div>
@@ -75,8 +75,7 @@
                                         <span class="question-mark">
                                             <i class="far fa-question-circle"></i>
                                         </span>
-                                        در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات
-                                        درمانی یا ... حاصل می شود؟
+                                        مشروح بیان مسئله و ضرورت اجرا
                                     </div>
                                     <div class="answer"></div>
                                 </div>
@@ -85,7 +84,7 @@
                                         <span class="question-mark">
                                             <i class="far fa-question-circle"></i>
                                         </span>
-                                        برآورد شما از سود مالی این پروژه چگونه است؟
+                                        سابقه طرح و بررسی متون
                                     </div>
                                     <div class="answer"></div>
                                 </div>
