--- a/industry/templates/industry/layouts/show_project.html
+++ b/industry/templates/industry/layouts/show_project.html
@@ -40,22 +40,22 @@
                                     <a class="nav-link active" id="v-pills-majors-tab-preview" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-majors"
                                        aria-selected="true">
-                                        شاخص ها
+                                        بیان مساله
                                     </a>
                                     <a class="nav-link" id="v-pills-approaches-tab-preview" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-approaches"
                                        aria-selected="false">
-                                        راهکار ها
+                                        روش اجرا
                                     </a>
                                     <a class="nav-link" id="v-pills-resources-tab-preview" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-resources"
                                        aria-selected="false">
-                                        منابع مورد نیاز
+                                        اهداف
                                     </a>
                                     <a class="nav-link" id="v-pills-roles-tab-preview" data-toggle="pill"
                                        role="tab" aria-controls="v-pills-roles"
                                        aria-selected="false">
-                                        قوانین
+                                        ملاحظات اخلاقی
                                     </a>
                                 </div>
                             </div>
