--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -21,7 +21,7 @@
                 {% csrf_token %}
                 <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
-                        <h6>اطلاعات اولیه</h6>
+                        <h6>مشخصات کلی</h6>
                     </div>
                     <div class="box-body">
                         <div class="row">
@@ -73,7 +73,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 text-right">
-                                <span class="sub-header" style="position: relative">روش تحقیق : </span>
+                                <span class="sub-header" style="position: relative">نوع مطالعه </span>
                                 <div class="error">
                                     <span class="error-body">{% render_field form.research_methodology.errors %}</span>
                                 </div>
@@ -94,13 +94,13 @@
                 </div>
                 <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
-                        <h6>شاخص ها</h6>
+                        <h6>بیان مساله</h6>
                     </div>
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">لطفا مشکل اصلی که پروژه به حل آن پرداخته را توضیح و اهمیت آن را تبیین کنید.</span>
+                                    <label for="id_main_problem_and_importance">خلاصه ضرورت اجرا</label>
                                     {% if form.main_problem_and_importance.errors %}
                                         {% render_field form.main_problem_and_importance class="error w-100" rows="5" dir="rtl" style="margin-top: 0" %}
                                     {% else %}
@@ -115,7 +115,7 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟</span>
+                                    <span class="sub-header">مشروح بیان مسئله و ضرورت اجرا</span>
                                     {% if form.progress_profitability.errors %}
                                         {% render_field form.progress_profitability class="error w-100" rows="5" dir="rtl" style="margin-top: 0" %}
                                     {% else %}
@@ -127,31 +127,30 @@
                                 </div>
                             </div>
                         </div>
-                        {% comment %} <div class="row">
+                        <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">برآورد شما از سود مالی این پروژه چگونه است؟</span>
+                                <span class="sub-header">سابقه طرح و بررسی متون</span>
                                 {% if form.predict_profit.errors %}
-                                    {% render_field form.predict_profit class="error w-100" rows="5" dir="rtl"  style="margin-top: 0" %}
+                                    {% render_field form.predict_profit class="error w-100" rows="5" dir="rtl" style="margin-top: 0" %}
                                 {% else %}
-                                    {% render_field form.predict_profit class="w-100" rows="5" dir="rtl"  style="margin-top: 0" %}
+                                    {% render_field form.predict_profit class="w-100" rows="5" dir="rtl" style="margin-top: 0" %}
                                 {% endif %}
                                 <div class="error">
                                     <span class="error-body">{% render_field form.predict_profit.errors %}</span>
-                                </div> 
+                                </div>
                             </div>
-                        </div> {% endcomment %}
+                        </div>
                     </div>
                 </div>
                 <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
-                        <h6>راهکار ها</h6>
+                        <h6>روش اجرا</h6>
                     </div>
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">لطفا راه حل خود را برای حل این مشکل به طور خلاصه توضیح دهید.</span>
-
+                                    <span class="sub-header">خلاصه روش اجرا</span>
                                     {% if form.approach.errors %}
                                         {% render_field form.approach class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
                                     {% else %}
@@ -166,7 +165,37 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header"> این راه حل چه مشکلاتی می‌تواند داشته باشد؟</span>
+                                    <span class="sub-header">مشخصات ابزار جمع آوری اطلاعات و نحوه جمع آوری آن</span>
+                                    {% if form.potential_problems.errors %}
+                                        {% render_field form.potential_problems class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.potential_problems class="w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.potential_problems.errors %}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <div class="form-group">
+                                    <span class="sub-header">روش محاسبه حجم نمونه و تعداد آن</span>
+                                    {% if form.potential_problems.errors %}
+                                        {% render_field form.potential_problems class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.potential_problems class="w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.potential_problems.errors %}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <div class="form-group">
+                                    <span class="sub-header">روش تجزیه و تحلیل داده ها</span>
                                     {% if form.potential_problems.errors %}
                                         {% render_field form.potential_problems class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
                                     {% else %}
@@ -180,17 +209,15 @@
                         </div>
                     </div>
                 </div>
-                {#                <div class="card-header">راهکار ها</div>#}
-                {#                <div class="card-header-info">در صورت وجود پیشنهاد</div>#}
                 <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
-                        <h6>منابع مورد نیاز</h6>
+                        <h6>اهداف</h6>
                     </div>
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">جهت انجام پروژه خود به چه امکانات یا آزمایشگاه هایی احتیاج دارید؟</span>
+                                    <span class="sub-header">اهداف اصلی</span>
 
                                     {% if form.required_lab_equipment.errors %}
                                         {% render_field form.required_lab_equipment class="error w-100" rows="4" dir="rtl" style="margin-top: 0" %}
@@ -206,7 +233,7 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">جهت انجام پروژه خود به چه تخصص ها و چه تکنیک ها آزمایشگاهی ای احتیاج دارید؟</span>
+                                    <span class="sub-header">اهداف فرعی</span>
                                     {% if form.required_method.errors %}
                                         {% render_field form.required_method class="error w-100" rows="4" dir="rtl" style="margin-top:0" %}
                                     {% else %}
@@ -221,7 +248,7 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">لطفا مراحل انجام پروژه خود را مشخص کنید.</span>
+                                    <span class="sub-header">اهداف کاربردی</span>
 
                                     {% if form.project_phase.errors %}
                                         {% render_field form.project_phase class="error w-100" rows="4" dir="rtl" style="margin-top: 0" %}
@@ -237,7 +264,22 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">پروژه شما به چه مقدار بودجه نیاز دارد؟</span>
+                                    <span class="sub-header">سوالات پژوهش</span>
+                                    {% if form.required_budget.errors %}
+                                        {% render_field form.required_budget class="error w-100" rows="4" style="margin-top: 0;direction: rtl" %}
+                                    {% else %}
+                                        {% render_field form.required_budget class="w-100" rows="4" style="margin-top: 0;direction: rtl" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.required_budget.errors %} </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <div class="form-group">
+                                    <span class="sub-header">فرضیات پژوهش</span>
                                     {% if form.required_budget.errors %}
                                         {% render_field form.required_budget class="error w-100" rows="4" style="margin-top: 0;direction: rtl" %}
                                     {% else %}
@@ -253,13 +295,28 @@
                 </div>
                 <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
-                        <h6>قوانین</h6>
+                        <h6>ملاحظات اخلاقی</h6>
                     </div>
                     <div class="box-body">
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <div class="form-group">
-                                    <span class="sub-header">از لحاظ نکات اخلاقی (کار با نمونه انسانی، حیوانی، مواد رادیواکتیو و...)، پروژه شما با چه چالش هایی روبه رو است؟</span>
+                                    <span class="sub-header">ملاحظات اخلاقی</span>
+                                    {% if form.policy.errors %}
+                                        {% render_field form.policy class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% else %}
+                                        {% render_field form.policy class="w-100" rows="7" dir="rtl" style="margin-top: 0" %}
+                                    {% endif %}
+                                    <div class="error">
+                                        <span class="error-body"> {% render_field form.policy.errors %} </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <div class="form-group">
+                                    <span class="sub-header">محدودیت های اجرایی طرح و روش کاهش آن</span>
                                     {% if form.policy.errors %}
                                         {% render_field form.policy class="error w-100" rows="7" dir="rtl" style="margin-top: 0" %}
                                     {% else %}
