--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -352,16 +352,17 @@
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="{% static 'js/fa.js' %}"></script>
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
     <script type="text/javascript">
         $(function () {
-             $('#ApplicationDeadline').datetimepicker({
-                 locale: 'fa',
-                 format: 'L',
-                 debug: true
-             });
-
+            $('#ApplicationDeadline').datetimepicker({
+                locale: 'fa',
+                format: 'YYYY/MM/DD',
+                debug: true,
+                showToday: true,
+            });
 
 
             //$('#datetimepicker13').datetimepicker({
