--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6422,6 +6422,10 @@ table .fas.fa-trash-alt:hover {
 /**********
       Date Picker
 **********/
+.datepicker {
+    direction: ltr;
+}
+
 .bootstrap-datetimepicker-widget table td.today::before {
     border-bottom-color: #3ccd1c !important;
 }
@@ -6436,11 +6440,24 @@ table .fas.fa-trash-alt:hover {
 
 .bootstrap-datetimepicker-widget {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: none!important;
+    border: none !important;
+}
+
+.bootstrap-datetimepicker-widget table td span.active {
+    background-color: #3ccd1c !important;
 }
 
 .list-unstyled {
     padding-right: 0;
+}
+
+.datepicker-days table tbody tr {
+    border-bottom: none;
+}
+
+/* *********** */
+.datepicker-plot-area {
+    font: 12px iranyekan;
 }
 
 /**********
