rename technique to researching skill

--- a/expert/templates/expert/layouts/dialog.html
+++ b/expert/templates/expert/layouts/dialog.html
@@ -2,11 +2,11 @@
 <div class="fixed-back technique-dialog-main">
     <div class="card text-right">
         <div class="close"></div>
-        <div class="card-head">تکنیک ها</div>
+        <div class="card-head">مهارت های پژوهشی</div>
         <div class="container">
             <div class='row'>
                 <div class='col-lg-12'>
-                    <span class='sub-header'>از میان تکنیک های طبقه بندی شده زیر، با کدام یک آشنایی دارید و میزان توانایی شما در هرکدام چقدر است؟<br> (لازم به ذکر است که آموزش تکنیک ها در تیم چمران ،به عنوان امتیاز بیشتر برای استاد گرامی تلقی می شود.)</span>
+                    <span class='sub-header'>از میان مهارت های پژوهشی طبقه بندی شده زیر، با کدام یک آشنایی دارید و میزان توانایی شما در هرکدام چقدر است؟<br> (لازم به ذکر است که آموزش مهارت های پژوهشی در تیم چمران ،به عنوان امتیاز بیشتر برای استاد گرامی تلقی می شود.)</span>
                 </div>
             </div>
             <div class="row">
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <input class="save-btn" type="submit" value="افزودن تکنیک">
+                    <input class="save-btn" type="submit" value="افزودن مهارت ">
                 </div>
             </form>
         </div>
