--- a/expert/templates/expert/layouts/researcher_request.html
+++ b/expert/templates/expert/layouts/researcher_request.html
@@ -1,4 +1,4 @@
-{% load static %}
+اا{% load static %}
 {% load date_tags %}
 {% load message_tags %}
 <div class="modal fade" id="researcherRequest" tabindex="-1" role="dialog" aria-labelledby="researcherRequestLabel"
