--- a/expert/templates/expert/layouts/resume_validation.html
+++ b/expert/templates/expert/layouts/resume_validation.html
@@ -37,7 +37,7 @@
                     <div class="col-12">
                         <div class="custom-techniques">
                             <div>
-                                <span>تکنیک </span><span>تکنیک </span><span>تکنیک </span><span>تکنیک </span>
+                                <span>مهارت پژوهشی </span><span>مهارت پژوهشی </span><span>مهارت پژوهشی </span><span>مهارت پژوهشی </span>
                             </div>
                         </div>
                     </div>
