--- a/expert/templates/expert/layouts/vote_dialog_researcher.html
+++ b/expert/templates/expert/layouts/vote_dialog_researcher.html
@@ -81,7 +81,7 @@
                                                         -
                                                     </span>
                                                     <span>
-                                                        دانشجو تسلط بر تکنیک های اعلام شده چه میزان بوده است؟
+                                                        تسلط دانشجو بر مهارت های پژوهشی اعلام شده چه میزان بوده است؟
                                                     </span>
                                                 </div>
                                                 <div class="text-center vote-select-parent pt-20 pb-40">
