--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -38,19 +38,19 @@
                     <div class="row">
                         <div class="col-md-1 d-md-block d-none"></div>
 
-                        <div class="col-md-10 text-right">
+                        <div class="col-md-10 text-right">ای
 
                             <p class="mb-4">شما در این قسمت می توانید مهارت هایی که برای پروژه خود نیاز دارید را وارد
                                 کنید.</p>
 
                             <div class="row">
                                 <div class="col-md-8 text-right mbottom-lg-25">
-                                    <span class="section-title">لیست تکنیک ها</span>
+                                    <span class="section-title">لیست مهارت های پژوهشی </span>
                                     <div class="section">
                                         <div id="fancy-tree"></div>
                                     </div>
                                     <div dir="rtl" class="sub-header mtop-lg-25">
-                                        در صورتی که تکنیک مورد نطر خود را در لیست بالا نیافتید، آن را اینجا وارد کنید و
+                                        در صورتی که مهارت پژوهشی مورد نطر خود را در لیست بالا نیافتید، آن را اینجا وارد کنید و
                                         کلید Enter
                                         را
                                         فشار دهید.
@@ -63,7 +63,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 text-right mbottom-lg-25">
-                                    <span class="section-title">تکنیک های انتخاب شده</span>
+                                    <span class="section-title">مهارت های پژوهشی انتخاب شده</span>
                                     <div class="section">
                                         <label for="tags"></label>
                                         <input name="techniques" id="tags" value="" class="w-100 no-click"/>
