--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -149,7 +149,7 @@
             {% endif %}
             <li class="list-group-item text-right {% if request.get_full_path ==  technique_url %}active{% endif %}">
                 <div>
-                    <span>تکنیک ها</span>
+                    <span>مهارت های پژوهشی</span>
                     <span class="fas fa-file-medical"></span>
                 </div>
             </li>
