--- a/researcher/templates/researcher/layouts/dialog.html
+++ b/researcher/templates/researcher/layouts/dialog.html
@@ -3,12 +3,12 @@
         <div class="close"></div>
         <div class="row technique-dialog">
             <div class="col-lg-12 text-right">
-                <span class="label header">تکنیک ها</span>
+                <span class="label header">مهارت های پژوهشی</span>
             </div>
         </div>
         <div class='row'>
             <div class='col-lg-12'>
-                <span class='sub-header'>از میان تکنیک های طبقه بندی شده زیر، با کدام یک آشنایی دارید و میزان توانایی شما در هرکدام چقدر است؟<br> (لازم به ذکر است که آموزش تکنیک ها در تیم چمران ،به عنوان امتیاز بیشتر برای استاد گرامی تلقی می شود.)</span>
+                <span class='sub-header'>از میان مهارت پژوهشی های طبقه بندی شده زیر، با کدام یک آشنایی دارید و میزان توانایی شما در هرکدام چقدر است؟<br> (لازم به ذکر است که آموزش مهارت های پژوهشی در تیم چمران ،به عنوان امتیاز بیشتر برای استاد گرامی تلقی می شود.)</span>
             </div>
         </div>
         <div class="row">
@@ -20,6 +20,6 @@
                 <div id="fancy-tree"></div>
             </div>
         </div>
-        <button type="button" class="chamran_btn" style="left: 0;bottom: -1px;">افزودن تکنیک</button>
+        <button type="button" class="chamran_btn" style="left: 0;bottom: -1px;">افزودن مهارت پژوهشی</button>
     </div>
 </div>
