--- a/researcher/templates/researcher/layouts/vote_dialog.html
+++ b/researcher/templates/researcher/layouts/vote_dialog.html
@@ -55,7 +55,7 @@
                                                         -
                                                     </span>
                                                         <span>
-                                                        آیا اطلاعات لازم درباره نحوه کار با تکنیک های مورد نیازطرح ، به شما داده شده است؟
+                                                        آیا اطلاعات لازم درباره نحوه کار با مهارت های پژوهشی مورد نیازطرح ، به شما داده شده است؟
                                                     </span>
                                                     </div>
                                                     <div class="text-center vote-select-parent pt-20 pb-40">
@@ -90,7 +90,7 @@
                                                         -
                                                     </span>
                                                         <span>
-                                                        میزان صحت تکنیک های مورد نیاز چقدر کامل بوده است؟
+                                                        میزان صحت مهارت های پژوهشی مورد نیاز چقدر کامل بوده است؟
                                                     </span>
                                                     </div>
                                                     <div class="text-center vote-select-parent pt-20 pb-40">
