--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -1,6 +1,6 @@
 {% extends "researcher/layouts/base_layout.html" %}
 {% load static %}
-{% block title %}تکنیک ها{% endblock %}
+{% block title %}مهارت هاپژوهشی{% endblock %}
 
 {% block dialog %}
     {% include 'researcher/layouts/technique_review_request.html' %}
@@ -12,10 +12,10 @@
 {% block content %}
     <div class="row">
         <div class="col-12 text-right">
-            <h3 class="h3 p-top-15 border-bottom">تکنیک ها</h3>
+            <h3 class="h3 p-top-15 border-bottom">مهارت هاپژوهشی</h3>
             <button class="add-new-technique top-page-button border-button" data-toggle="modal" data-target="#addNewTechnique">
                 <i class="fas fa-plus"></i>
-                <span>افزودن تکنیک جدید</span>
+                <span>افزودن مهارت پژوهشی جدید</span>
             </button>
         </div>
     </div>
@@ -107,11 +107,11 @@
                         <div class="empty-page">
                             <div class="empty-page-container">
                                 <img src="{% static 'img/empty_technique.svg' %}" alt="">
-                                <h5>اولین تکنیک خود را ثبت کنید!</h5>
-                                <pre>تکنیک‌ها به معنای مهارت‌های آزمایشگاهی‌ای هستند که شما قرار است در پروژه‌ها مورد استفاده قرار بگیرند؛ به عنوان مثال، RT-PCR و یا H&E Staining هر کدام نمونه‌هایی از یک تکنیک هستند. تکنیک‌ها رکن اصلی فعالیت شما در چمران تیم هستند؛ چرا که تنها پروژه‌هایی به شما پیشنهاد می‌شود که شما تکنیک‌های مورد نیاز آن را در حساب کاربری‌تان ثبت کرده باشید. برای افزودن یک تکنیک به حساب کاربری خود، بر روی دکمه زیر کلیک کنید.</pre>
+                                <h5>اولین مهارت پژوهشی خود را ثبت کنید!</h5>
+                                <pre>مهارت هاپژوهشی‌ به معنای مهارت‌های آزمایشگاهی‌ای هستند که شما قرار است در پروژه‌ها مورد استفاده قرار بگیرند؛ به عنوان مثال، RT-PCR و یا H&E Staining هر کدام نمونه‌هایی از یک مهارت پژوهشی هستند. مهارت هاپژوهشی‌ رکن اصلی فعالیت شما در چمران تیم هستند؛ چرا که تنها پروژه‌هایی به شما پیشنهاد می‌شود که شما مهارت های پژوهشی‌ مورد نیاز آن را در حساب کاربری‌تان ثبت کرده باشید. برای افزودن یک مهارت پژوهشی به حساب کاربری خود، بر روی دکمه زیر کلیک کنید.</pre>
                                 <button class="add-new-technique border-button" data-toggle="modal" data-target="#addNewTechnique">
                                     <i class="fas fa-plus"></i>
-                                    <span>افزودن تکنیک جدید</span>
+                                    <span>افزودن مهارت پژوهشی جدید</span>
                                 </button>
                             </div>
                         </div>
