--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -53,7 +53,7 @@
                 <div class="row mbottom-lg-25">
                     <div class="col-md-3">
                         <div class="divide__line text-right">
-                            <span class="w__title">تکنیک ها</span>
+                            <span class="w__title">مهارت های پژوهشی</span>
                             <span class="__line"></span>
                         </div>
                         <div class="row">
