--- a/expert/templates/expert/layouts/select_techniques.html
+++ b/expert/templates/expert/layouts/select_techniques.html
@@ -6,7 +6,7 @@
                   data-url="{% url 'expert:accept_project' %}">
                 {% csrf_token %}
       <div class="modal-header">
-        <h6 class="modal-title text-right" id="showProjectLabel">انتخاب تکنیک</h6>
+        <h6 class="modal-title text-right" id="showProjectLabel">انتخاب مهارت پژوهشی</h6>
         <button type="button" class="close close__redirect" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -14,28 +14,27 @@
             <div class="row mbottom-lg-25">
                 <div class="col-lg-12 text-right">
                     پیش از ارسال درخواستتان برای صاحب پروژه و تایید نهایی آن،
-                    در این قسمت می بایست تکنیک هایی که به نظرتان برای انجام پروژه به آنها نیاز خواهید داشت را انتخاب
+                    در این قسمت می بایست مهارت های پژوهشی که به نظرتان برای انجام پروژه به آنها نیاز خواهید داشت را انتخاب
                     کنید.
                 </div>
             </div>
                 <div class="row">
                     <div class="col-md-8 text-right mbottom-lg-25">
-                        <span class="section-title">لیست تکنیک ها</span>
+                        <span class="section-title">لیست مهارت های پژوهشی</span>
                         <div class="section">
                             <div id="fancy-tree"></div>
                         </div>
                         <div dir="rtl" class="sub-header mtop-lg-25">
-                            در صورتی که تکنیک مورد نطر خود را در لیست بالا نیافتید، آن را اینجا وارد کنید و کلید Enter
+                            در صورتی که مهارت پژوهشی مورد نطر خود را در لیست بالا نیافتید، آن را اینجا وارد کنید و کلید Enter
                             را
                             فشار دهید.
                         </div>
                         <div style="position: relative">
-                            <input style="margin: 0" type="text" class="w-100" name="" id="add-new-technique"
-                                   placeholder="برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید">
+                            <input style="margin: 0" type="text" class="w-100" name="" id="add-new-technique">
                         </div>
                     </div>
                     <div class="col-md-4 text-right mbottom-lg-25">
-                        <span class="section-title">تکنیک های انتخاب شده</span>
+                        <span class="section-title">مهارت های پژوهشی انتخاب شده</span>
                         <div class="section">
                             <label for="tags"></label>
                             <input name="techniques" id="tags" value="" class="w-100"/>
