--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -17,22 +17,22 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h6 class="modal-title" id="previewKeywordsLabel">تکنیک های پروژه</h6>
+                    <h6 class="modal-title" id="previewKeywordsLabel">مهارت های پروژه</h6>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body pt-0">
                     <div class="row">
                         <div class="col-lg-6 mt-3">
                             <div class="divide__line text-right">
-                                <span class="w__title">تکنیک های من</span>
+                                <span class="w__title">مهارت های من</span>
                                 <span class="__line"></span>
                             </div>
                             <div class="row mt-3">
                                 <div class="col">
                                     <div class="project-techniques">
                                         <div>
-                                            <span>تکنیک موجود من</span>
-                                            <span class="primary-technique">تکنیک به درد نخور من</span>
+                                            <span>مهارت موجود من</span>
+                                            <span class="primary-technique">مهارت پژوهشی به درد نخور من</span>
                                         </div>
                                     </div>
                                 </div>
@@ -40,15 +40,15 @@
                         </div>
                         <div class="col-lg-6 mt-3">
                             <div class="divide__line text-right">
-                                <span class="w__title">تکنیک های پروژه</span>
+                                <span class="w__title">مهارت های پروژه</span>
                                 <span class="__line"></span>
                             </div>
                             <div class="row mt-3">
                                 <div class="col">
                                     <div class="project-techniques">
                                         <div>
-                                            <span class="missed-technique">تکنیک ناموجود</span>
-                                            <span>تکنیک موجود ما</span>
+                                            <span class="missed-technique">مهارت پژوهشی ناموجود</span>
+                                            <span>مهارت پژوهشی موجود ما</span>
                                         </div>
                                     </div>
                                 </div>
@@ -150,8 +150,8 @@
                         <div class="no-project-container">
                             <div class="no-project">
                                 <img src="{% static 'img/no_project.svg' %}" alt="logo" class="icon">
-                                <h4>متاسفانه، هنوز پروژه ای متناسب با تکنیک های ثبت شده شما، ارائه نشده!</h4>
-                                <p>می توانید تکنیک های بیشتر را از طریق</p>
+                                <h4>متاسفانه، هنوز پروژه ای متناسب با مهارت های پژوهشی ثبت شده شما، ارائه نشده!</h4>
+                                <p>می توانید مهارت های پژوهشی بیشتر را از طریق</p>
                                 <a href="https://www.aparat.com/chamran_team">
                                     <i class="aparat-ico"></i>
                                     <span>Chamran_Team</span>
@@ -159,7 +159,7 @@
                                 <p>یاد بگیرید و در قسمت </p>
                                 <span>
                                     <i class="fas fa-file-medical"></i>
-                                    <span>تکنیک ها</span>
+                                    <span>مهارت پژوهشی ها</span>
                                 </span>
                                 <p>آن را ثبت کنید. با این کار شانس بیشتری برای همکاری با اساتید خواهید داشت. </p>
                                 <br>
@@ -313,7 +313,7 @@
                                 <div class="empty-page-container">
                                     <img src="{% static 'img/packet.svg' %}" alt="">
                                     <h5>پروژه ای خارج از دسترس شما وجود ندارد!</h5>
-                                    <pre>در صورتی که پروژه ای وجود داشته باشد که شما فاقد تکنیک های لازم آن باشید، این پروژه ها در این قسمت قرار خواهند گرفت و این کمک را به شما می کند که بتوانید با ارتقا هدفمند تکنیک های خود در پروژه مورد علاقه خود شرکت داشته باشید.</pre>
+                                    <pre>در صورتی که پروژه ای وجود داشته باشد که شما فاقد مهارت پژوهشی های لازم آن باشید، این پروژه ها در این قسمت قرار خواهند گرفت و این کمک را به شما می کند که بتوانید با ارتقا هدفمند مهارت های پژوهشی خود در پروژه مورد علاقه خود شرکت داشته باشید.</pre>
                                 </div>
                             </div>
                         </div>
@@ -333,7 +333,7 @@
                                     class='fas fa-hourglass-end'></i>مدت زمان پروژه : <span> {{ project.delta_date }} </span></span>
                             <span><i
                                     class='fas fa-hourglass-end'></i>درأمد : <span> {{ project.income }} </span> کسب کرده اید.</span>
-                            <span><i class='fas fa-hourglass-end'></i>تکنیک های مورد استفاده :
+                            <span><i class='fas fa-hourglass-end'></i>مهارت های پژوهشی مورد استفاده :
                                 {% for technique in project.technique %}
                                     <span> {{ technique }} , </span>
                                 {% endfor %}
