--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -5,7 +5,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h6 class="modal-title text-right" id="addNewTechniqueLabel">ثبت تکنیک جدید</h6>
+                <h6 class="modal-title text-right" id="addNewTechniqueLabel">ثبت مهارت پژوهشی جدید</h6>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="post" enctype="multipart/form-data" url='{% url "researcher:add_technique" %}'
@@ -16,9 +16,9 @@
                         <div class="row mbottom-lg-25">
                             <div class="col-lg-12">
                                 <div class="form-group">
-                                    <label for="technique-name">نام تکنیک</label>
+                                    <label for="technique-name">نام مهارت </label>
                                     <input type="text" id="technique-name" name="technique" value="" class="w-100"
-                                           placeholder="برای انتخاب نام تکنیک، روی علامت مثبت کلیک کنید">
+                                           placeholder="برای انتخاب نام مهارت پژوهشی، روی علامت مثبت کلیک کنید">
                                     <button class="select-technique" type="button">
                                         <i class="fas fa-plus"></i>
                                     </button>
@@ -30,7 +30,7 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="section-title">نحوه ثبت تکنیک</span>
+                                <span class="section-title">نحوه ثبت مهارت</span>
                                 <div class="confirmation section">
                                     <div class="radio-group row">
                                         <div class="technique_validation"></div>
