project setting attachments

--- a/industry/templates/industry/layouts/project_setting.html
+++ b/industry/templates/industry/layouts/project_setting.html
@@ -50,7 +50,8 @@
                                         <div id="fancy-tree"></div>
                                     </div>
                                     <div dir="rtl" class="sub-header mtop-lg-25">
-                                        در صورتی که مهارت پژوهشی مورد نطر خود را در لیست بالا نیافتید، آن را اینجا وارد کنید و
+                                        در صورتی که مهارت پژوهشی مورد نطر خود را در لیست بالا نیافتید، آن را اینجا وارد
+                                        کنید و
                                         کلید Enter
                                         را
                                         فشار دهید.
@@ -69,6 +70,35 @@
                                         <input name="techniques" id="tags" value="" class="w-100 no-click"/>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="divide__line text-right mb-4 mt-5">
+                        <span class="w__title">ضمیمه ها</span>
+                        <span class="__line"></span>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-1 d-md-block d-none"></div>
+                        <div class="col-md-10">
+                            <div class="form-group">
+                                <label for="telegramGroupLink">لینک گروه تلگرام</label>
+                                <input type="text" class="form-control" id="telegramGroupLink"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="endNoteFile" class="d-block file-upload-min">
+                                    بارگذاری فایل EndNote
+                                    <span class="file-upload-min-value">برای بارگذاری فایل کلیک کنید!</span>
+                                </label>
+                                <input type="file" id="endNoteFile" hidden/>
+                            </div>
+                            <div class="form-group mb-0">
+                                <label class="d-block file-upload-min" for="proposalFile">
+                                    بارگذاری فرم پروپوزال پژوهش
+                                    <span class="file-upload-min-value">برای بارگذاری فایل کلیک کنید!</span>
+                                </label>
+                                <input type="file" id="proposalFile" hidden/>
                             </div>
                         </div>
                     </div>
