--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6463,3 +6463,44 @@ table .fas.fa-trash-alt:hover {
 /**********
       End Date Picker
 **********/
+
+.file-upload-min {
+    padding-bottom: 40px;
+    position: relative;
+    cursor: pointer;
+}
+
+.file-upload-min:before {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    right: 0;
+    background-color: #f7fdf8;
+    border: dashed #bdbdbd 1px;
+    height: 40px;
+    width: 100%;
+    border-radius: 0.25em;
+}
+
+.file-upload-min-value {
+    background-color: #3ccd1c;
+    color: #ffffff;
+    border-radius: 0.25em;
+    position: absolute;
+    padding: 2px 10px;
+    top: 29px;
+    right: 50%;
+    transform: translateX(50%);
+    width: -moz-max-content;
+    width: max-content;
+}
+
+.file-upload-min:hover:before {
+    border-color: #3ccd1c;
+    cursor: pointer;
+    background-color: #ffffff;
+}
+
+.file-upload-min-value:hover {
+    cursor: pointer;
+}
